[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "plip"
authors = [
    {name = "Akshay Krishna AK", email = "akshaykrishnaak9@gmail.com"},
    {name = "Julien Lam", email = "julien.lam@cnrs.fr"},

]
description = "A python package for PLIP ML potential"
requires-python = ">=3.8"
version = "0.3.1"
license = { "file" = "LICENSE" }
readme = "README.md"
dependencies = [
    "scikit-learn",
	"PyYAML       ~=6.0",
    "atsim.potentials ~=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
plip_fit = "plip.cli.interface:interface"

[project.optional-dependencies]
dev = [
    "flake8 ~=6.0.0",
    "pytest ~= 7.3.1",
    "sphinx-rtd-theme ~=1.2.1",
    "Sphinx ~=6.2.1",
    "breathe ~=4.35.0",
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version = "0.3.1"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
